Removing redundant double semicolon