@@ -23,9 +23,10 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 
-import static uk.gov.hmcts.sptribs.caseworker.util.EventConstants.DOUBLE_SEMICOLON;
+import static uk.gov.hmcts.sptribs.caseworker.util.EventConstants.DOUBLE_HYPHEN;
 import static uk.gov.hmcts.sptribs.caseworker.util.EventConstants.DRAFT;
 import static uk.gov.hmcts.sptribs.caseworker.util.EventConstants.SEMICOLON;
+
 
 @Service
 @Slf4j
@@ -59,7 +60,7 @@ public class OrderService {
                 .stream()
                 .sorted()
                 .map(order -> DynamicListElement.builder().label(order).code(UUID.randomUUID()).build())
-                .collect(Collectors.toList());
+                .toList();
 
             return DynamicList
                 .builder()
@@ -71,7 +72,7 @@ public class OrderService {
 
     public CaseData generateOrderFile(CaseData caseData, Long caseId, String date) {
         String subjectName = caseData.getCicCase().getFullName();
-        final String filename = DRAFT + SEMICOLON + "Order" + DOUBLE_SEMICOLON + "[" + subjectName + "]" + DOUBLE_SEMICOLON + date;
+        final String filename = DRAFT + SEMICOLON + "Order" + DOUBLE_HYPHEN + "[" + subjectName + "]" + DOUBLE_HYPHEN + date;
 
         Document generalOrderDocument = caseDataDocumentService.renderDocument(
             previewDraftOrderTemplateContent.apply(caseData, caseId),
